SEAB-6164: resizing and alignment fix for the new landing page (#1907)
* resizing and alignment fix

* codacy

* test

* pr preview

* pr review

--- a/src/app/github-landing-page/github-landing-page.component.scss
+++ b/src/app/github-landing-page/github-landing-page.component.scss
@@ -3,7 +3,7 @@
 }
 
 .landing-page-card {
-  width: 40%;
+  margin-bottom: 2%;
 }
 
 .header-container {
@@ -22,8 +22,7 @@ mat-divider {
 }
 
 .landing-page-card-content {
-  width: 80%;
-  padding: 0 5%;
+  width: 90%;
   margin: auto;
 }
 
